// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it renders 1`] = `
<input
  className="fnidvC"
/>
`;

exports[`Input it renders an input element with a really large padding and margin 1`] = `
<input
  className="jSaXxY"
/>
`;

exports[`Input it renders an input element with a red border with a color prop is passed 1`] = `
<input
  className="bLkOVr"
  color="red"
/>
`;

exports[`Input it renders an input element with large text 1`] = `
<input
  className="fnidvC"
  fontSize={4}
/>
`;
